--- a/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
+++ b/notebook/1 . EDA STUDENT PERFORMANCE .ipynb
@@ -83,6 +83,14 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "279d0d97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "92c8fd8a",
    "metadata": {},
@@ -732,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "2dd97e26",
    "metadata": {},
    "outputs": [
@@ -748,8 +756,8 @@
    ],
    "source": [
     "# define numerical & categorical columns\n",
-    "numeric_features = [feature for feature in df.columns if df[feature].dtype != 'O']\n",
-    "categorical_features = [feature for feature in df.columns if df[feature].dtype == 'O']\n",
+    "numeric_features = [feature for feature in df.columns if df[feature].dtype != 'O'] #not object means numerical feature\n",
+    "categorical_features = [feature for feature in df.columns if df[feature].dtype == 'O'] # obj means categorical feature\n",
     "\n",
     "# print columns\n",
     "print('We have {} numerical features : {}'.format(len(numeric_features), numeric_features))\n",
@@ -1814,7 +1822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1828,12 +1836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "7f9dc718a552478e14f37d36e0ca2ac7de1ac15c04a40a415ea3abc3fe8a0a39"
-   }
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
