--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -420,7 +420,7 @@
     "\n",
     "numeric_transformer = StandardScaler()\n",
     "oh_transformer = OneHotEncoder()\n",
-    "\n",
+    "#column transformer combines standardscalar and onehotencoding\n",
     "preprocessor = ColumnTransformer(\n",
     "    [\n",
     "        (\"OneHotEncoder\", oh_transformer, cat_features),\n",
@@ -1031,7 +1031,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1045,7 +1045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
